fixed wrong class name

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -22,7 +22,7 @@
                                 id="url-field" 
                                 aria-describedby="basic-addon3"
                                 placeholder="Enter your favorite link here">
-                            <button class="btn btn-default btn-lg">Create!</button>
+                            <button class="btn btn-primary btn-lg">Create!</button>
                         </div>
                         
                         <div id="result"></div>
